Added some base for an Save Editor! Added a fancy view for your current worn gear Added Decompress / Compress features for easier developing Cleaned up nearly everything Much more to come!

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,5 +1,9 @@
+DirectoryIndex index.php
+
 RewriteEngine on
-RewriteCond %{SCRIPT_FILENAME} !-f
-RewriteCond %{SCRIPT_FILENAME} !-d
-RewriteCond %{SCRIPT_FILENAME} !-l
-RewriteRule ^(.*)$ index.php/$1
+RewriteBase /
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond $1 !^(index\.php|robots\.txt)
+
+RewriteRule ^(.*)$ index.php?/$1 [L]
