Im Alive! Added Translations, thanks to: GUEVARA#9045 for the japanese translations Updated Dependencies Misc stuff

--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,13 @@
     },
 
     "require": {
-        "pecee/simple-router": "4.2.0.6",
+        "php": "^7.4",
+        "pecee/simple-router": "^4.2.0.6",
         "doctrine/orm": "*",
       "ext-json": "*",
         "mdurrant/php-binary-reader": "^1.0",
-        "doctrine/cache": "1.11.3"
+        "doctrine/cache": "^1.11.3",
+        "doctrine/annotations": "^1.13",
+        "symfony/cache": "^5.4"
     }
 }
