Added Backup rename feature. Added ID's to Roadshop items.

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "mdurrant/php-binary-reader": "^1.0",
         "doctrine/cache": "^1.11.3",
         "doctrine/annotations": "^1.13",
-        "symfony/cache": "^5.4"
+        "symfony/cache": "^5.4",
+        "omines/datatables-bundle": "^0.5.5"
     }
 }
