--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - internal
     volumes:
       - ./docker/dev/nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./public:/var/www/html
+      - .:/var/www/html
     depends_on:
       - php
   php:
