feat: add custom docker for php

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,8 @@ services:
     depends_on:
       - php
   php:
-    image: php:fpm-alpine
+    build: 
+      context: ./docker/dev/php
     networks:
       - internal
     volumes:
