--- a/docker/dev/php/Dockerfile
+++ b/docker/dev/php/Dockerfile
@@ -9,6 +9,6 @@ RUN apt update \
   && docker-php-ext-configure zip \
   && docker-php-ext-install zip
 
-WORKDIR /var/www/slim_app
+WORKDIR /var/www/html
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
